[package]
name = "method-chains"
version = "0.1.1"
authors = ["Konrad Siek <konrad.siek@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.16", features = ["derive", "cargo" ] }
anyhow = "1.0.41"
itertools = "0.10.1"
bstr = "0.2.16"